--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   get: 4.6.5
   flutter: 
     sdk: flutter
+  syncfusion_flutter_signaturepad: ^20.3.60
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
